(search) Report page align boxes and fix styles

--- a/applications/search/src/pages/datasets-report-page/report-stats/report-stats.scss
+++ b/applications/search/src/pages/datasets-report-page/report-stats/report-stats.scss
@@ -3,7 +3,7 @@
 .fdk-container-stats {
   background-color: $color0;
   border: 1px solid $color6;
-  margin: 0 .9em .9em 0;
+  margin-bottom: .9em;
   padding: .9em 2em;
   border-radius: 5px;
   h2 {    
